--- a/bloodDonation.html
+++ b/bloodDonation.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="bloodDonation.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="bloodDonation.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,800;0,900;1,300&display=swap" rel="stylesheet">
+<title>Document</title>
 </head>
 <body>
-  <nav>
-    <div class="logo">
-      <img src="https://t3.ftcdn.net/jpg/02/64/43/94/240_F_264439411_iBRpaJO6TS6IhU18qoXWfKutbi0xxSpV.jpg" alt="Logo">
-    </div>
-    <ul class="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Donate</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+  <div class="hero">
+    <nav>
+      <h2 class="logo">Ayu<span>Nik</span></h2>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+      <button type="button">Hire me</button>
+    </nav>
+  </div>
 </body>
 </html>
 
